swapped hr with svg and added meta viewport

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,12 +25,11 @@ h2 {
   font-size: 24px;
 }
 
-hr {
+.divider {
   margin: 35px auto;
   width: 460px;
   background-color: #A8CCD5;
-  height: 2px;
-  border: 0;
+  height: 1px;
 }
 
 fieldset {
